src/browser14.css
pre { background-color: gray; }

a { color: blue; }
i { font-style: italic; }
b { font-weight: bold; }
small { font-size: 90%; }
big { font-size: 110%; }


input {
    font-size: 16px; font-weight: normal; font-style: normal;
    background-color: lightblue;
}
button {
    font-size: 16px; font-weight: normal; font-style: normal;
    background-color: orange;
}

input:focus { outline: 2px solid black; }

button:focus { outline: 2px solid black; }

div:focus { outline: 2px solid black; }

a:focus {
    outline: 2px solid black;
}

@media (prefers-color-scheme: dark) {
  a { color: lightblue; }
  input { background-color: blue; }
  button { background-color: orangered; }

  input:focus { outline: 2px solid white; }
  button:focus { outline: 2px solid white; }
  div:focus { outline: 2px solid white; }
  a:focus { outline: 2px solid white; }
}

